# devbox-examples

./: .gitignore  README.md
cloud_development/argo-workflows/: devbox.json
cloud_development/maelstrom/: README.md  devbox.json
cloud_development/minikube/: devbox.json
cloud_development/temporal/: README.md  devbox.json  requirements.txt
cloud_development/temporal/temporal-example/: pyproject.toml
cloud_development/temporal/temporal_example/: README.md  pyproject.toml
databases/mariadb/: devbox.json
databases/postgres/: README.md  devbox.json
databases/postgres/conf/: set-env.sh  (+1 more)
databases/redis/: .gitignore  README.md  devbox.json
development/cplusplus/: Brakes.cpp  devbox.json
development/fsharp/: README.md
development/haskell/: devbox.json
development/nim/: devbox.json  package.nimble
development/ruby/: devbox.json
lamp-stack/conf/: set-env.sh
lamp-stack/my_app/: config.php  index.php
lemp-stack/: setup_db.sql
lemp-stack/my_app/: config.php
servers/apache/: devbox.json
servers/caddy/: README.md  devbox.json
servers/nginx/: devbox.json
stacks/django/: README.md  devbox.json  requirements.txt
stacks/drupal/: .gitignore  README.md  composer.json  devbox.json  install-drupal.sh  setup_db.sql
stacks/jekyll/: README.md  devbox.json
stacks/lamp-stack/: README.md  devbox.json
stacks/lapp-stack/: README.md  devbox.json
stacks/lemp-stack/: README.md  devbox.json  setup_postgres_db.sql
stacks/lepp-stack/: README.md  devbox.json  setup_postgres_db.sql
stacks/rails/: README.md  devbox.json
tutorial/: README.md  devbox.json
(+77 files in other folders)
