[tool.poetry]
name = "temporal-example"
version = "0.1.0"
description = ""
authors = ["John Lago <750845+Lagoja@users.noreply.github.com>"]
readme = "README.md"
packages = [{include = "temporal_example"}]

[tool.poetry.dependencies]
python = "^3.10"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
